# minimal-bert

./: .gitignore  LICENSE  README.md  inference_demo.py  main.py  pyproject.toml  training_demo.py
scripts/: inference_demo.py  training_demo.py
src/: __init__.py  bert_model.py  config.py  embeddings.py  heads.py  multi_head_attention.py  transformer_encoder_layer.py  utils.py
tests/: conftest.py  test_attention.py  test_bert_model.py  test_custom_vs_hf.py  test_embeddings.py  test_encoder_layer.py  test_heads.py
