[project]
name = "minimal-bert"
version = "0.1.0"
description = "Minimal Implementation of BERT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[tool.setuptools]
package-dir = { "" = "src" }
